# SmallServers

./: .gitignore  .travis.yml  Parser.py  README.md  build.sh  build_cpp.sh  build_go.sh  build_py.sh  client.py  client_zw.py  gen.sh  load_gen.sh  server.cpp  server.py
cpp/: .gitignore  CMakeLists.txt  Response.cpp  Response.hpp  ResponseBuilder.cpp  XmlParser.cpp  client.cpp  response.cpp  response.hpp  response_factory.cpp  response_factory.hpp  server.cpp
cpp/common/: CMakeLists.txt  Response.cpp  ResponseBuilder.hpp  XmlParser.cpp  XmlParser.hpp
cpp/common/utst/: CMakeLists.txt  ResponseBuilderTests.cpp  ResponseTests.cpp  XmlParserTests.cpp  helpers.cpp  helpers.hpp
cpp/mt/: .gitignore  CMakeLists.txt  response.cpp  server.cpp
cpp/st/: .gitignore  CMakeLists.txt  response.cpp  response.hpp  server.cpp
cpp_mt/: CMakeLists.txt  server.cpp
cpp_st/: server.cpp
go/: server.go
go/common/: function.go
go/mt/: server.go
go/src/common/: functions.go  functions_test.go
go/src/mt/: server.go
go/src/st/: server.go
go/st/: server.go
go_st/: server.go
py/: server.py
py/common/: Configuration.py  Parser.py  ResponseBuilder.py
py/common/utst/: helpers.py  test_parser.py  test_response_builder.py
py/mt/: ResponseBuilder.py  server.py
py/st/: client_zw.py  server.py
py_mt/: Configuration.py  server.py
scripts/: gen.sh  timing.sh
tst/: conftest.py  raw_xml.py  test_servers.py
